# GtkShell

./: .gitignore  README.md  fixPythonModules.patch  flake.nix  main.py  meson.build  meson_options.txt  pyproject.toml  run.py  shell
.stfolder/: syncthing-folder-ac918e.txt
data/: meson.build
data/icons/: meson.build
data/rules/: meson.build
doc/: schema.json
installation/data/xtreme_shell/xtreme_shell/lib/: bluetooth.py  constants.py  task.py  versions.py
installation/data/xtreme_shell/xtreme_shell/lib/services/: opt.py  weather.py
installation/data/xtreme_shell/xtreme_shell/widgets/custom/: box.py  header.py  widget.py
installation/data/xtreme_shell/xtreme_shell/widgets/notifications/: center.py  item.py
installation/data/xtreme_shell/xtreme_shell/widgets/quick/buttons/: tray.py
installation/data/xtreme_shell/xtreme_shell/widgets/quick/scales/: backlight.py
lib/: bluetooth.py  config.py  constants.py  debug.py  logger.py  network.py  style.py  task.py  utils.py  variable.py  versions.py
lib/services/: backlight.py  brightness.py  opt.py  weather.py
nix/: fixUdevRules.patch
src/: meson.build  shell.in
src/lib/: __init__.py  utils.py
src/style/scss/: main.scss
src/style/scss/widgets/: bar.scss
src/widgets/bar/: __init__.py  meson.build  music.py
src/widgets/custom/: meson.build
src/widgets/notifications/: __init__.py  meson.build
src/widgets/prompts/: meson.build
src/widgets/quick/buttons/: dnd.py  meson.build
style/: style.css  style.css.map
style/scss/: colors.scss  main.scss
style/scss/widgets/: bar.scss  notifications.scss  prompts.scss  quick.scss
widgets/apps/: __init__.py  __init__.py.old
widgets/bar/: __init__.py  hypr.py  music.py
widgets/custom/: box.py  buttons.py  header.py  icons.py  pages.py  widget.py
widgets/notifications/: __init__.py  center.py  item.py
widgets/prompts/: network.py
widgets/quick/: buttons.py  menus.py  scales.py  settings.py
widgets/quick/buttons/: audio.py  bluetooth.py  dnd.py  network.py  tray.py
widgets/quick/menus/: audio.py  network.py  tray.py
widgets/quick/scales/: __init__.py  audio.py  backlight.py  quick.py
xtreme-shell/: __init__.py  main.py  meson.build
xtreme-shell/components/: bar.py
xtreme-shell/modules/: config.py  constants.py  gobject.py  logger.py  meson.build  style.py  thread.py  versions.py
xtreme-shell/modules/services/: meson.build  opt.py
xtreme-shell/services/: opt.py
xtreme-shell/widgets/: __init__.py  box.py  window.py
xtreme_shell/: __init__.py  main.py  meson.build  xtreme-shell.in
xtreme_shell/components/: bar.py  meson.build
xtreme_shell/data/: meson.build  xtreme-shell.gresource.xml
xtreme_shell/data/styles/: bar.scss  main.scss
xtreme_shell/data/ui/: bar.blp  meson.build  music-label.blp  music-viewer-controls.blp  music-viewer.blp
xtreme_shell/lib/: config.py  constants.in  debug.py  loader.py  meson.build  network.py  style.py  utils.py  variable.py  versions.py
xtreme_shell/lib/services/: backlight.py  meson.build  opt.py  weather.py
xtreme_shell/modules/: config.py  constants.in  constants.py  gobject.py  logger.py  meson.build  style.py  thread.py  versions.py
xtreme_shell/modules/services/: opt.py
xtreme_shell/styles/: ai.scss  bar.scss  main.scss
xtreme_shell/widgets/: __init__.py  box.py  cava.py  corners.py  images.py  meson.build  window.py
xtreme_shell/widgets/ai/: __init__.py  chat.py
xtreme_shell/widgets/apps/: __init__.py  meson.build
xtreme_shell/widgets/bar/: __init__.py  hypr.py  meson.build  music.py
xtreme_shell/widgets/bar.old/: wm.py
xtreme_shell/widgets/custom/: buttons.py  icons.py
xtreme_shell/widgets/music/: __init__.py  current.py  meson.build
xtreme_shell/widgets/prompts/: network.py
xtreme_shell/widgets/quick/: meson.build  settings.py
xtreme_shell/widgets/quick/buttons/: audio.py  bluetooth.py  network.py  tray.py
xtreme_shell/widgets/quick/scales/: __init__.py  audio.py  meson.build  quick.py
